# auto-diff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml  coverage.yml
CMake/: AutoDiffConfig.cmake.in  strip.cmake
benchmarks/: CMakeLists.txt  basic-sigmoid.cpp  eigen-sigmoid.cpp
docs/: applications.md  classes.md  developer.md  index.md
docs/core/: expression.md  function.md  variable.md
docs/math/: api-math.md  diff-geo-chart.md  diff-geo.md
docs/modules/: basic.md  eigen.md
examples/: CMakeLists.txt  backpropagation.cpp  basic.cpp  eigen.cpp
include/AutoDiff/: Basic  Core  Eigen
include/AutoDiff/src/Basic/: common.hpp  factories.hpp  module.hpp  ops.hpp  traits.hpp
include/AutoDiff/src/Basic/ops/: ArcCos.hpp  ArcCot.hpp  ArcSin.hpp  ArcTan.hpp  Cos.hpp  Cosh.hpp  Cot.hpp  Difference.hpp  Exp.hpp  Log.hpp  Max.hpp  Min.hpp  Negation.hpp  Pow.hpp  Product.hpp  Quotient.hpp  Sin.hpp  Sinh.hpp  Sqrt.hpp  Square.hpp  Sum.hpp  Tan.hpp  Tanh.hpp
include/AutoDiff/src/Core/: AbstractVariable.hpp  BinaryOperation.hpp  Expression.hpp  Function.hpp  UnaryOperation.hpp  Variable.hpp
include/AutoDiff/src/Eigen/: module.hpp  traits.hpp
include/AutoDiff/src/Eigen/Array/: common.hpp  factories.hpp  ops.hpp
include/AutoDiff/src/Eigen/Array/ops/: Cos.hpp  Difference.hpp  Exp.hpp  Log.hpp  Max.hpp  Min.hpp  Negation.hpp  Pow.hpp  Product.hpp  Quotient.hpp  Sin.hpp  Sqrt.hpp  Square.hpp  Sum.hpp
include/AutoDiff/src/Eigen/CWise/: common.hpp  factories.hpp  ops.hpp
include/AutoDiff/src/Eigen/CWise/ops/: Cos.hpp  Difference.hpp  Exp.hpp  Log.hpp  Max.hpp  Min.hpp  Negation.hpp  Pow.hpp  Product.hpp  Quotient.hpp  Sin.hpp  Sqrt.hpp  Square.hpp  Sum.hpp
include/AutoDiff/src/Eigen/Products/: common.hpp  factories.hpp  ops.hpp
include/AutoDiff/src/Eigen/Products/ops/: DotProduct.hpp  MatrixProduct.hpp  MatrixVectorProduct.hpp  TensorProduct.hpp
include/AutoDiff/src/Eigen/Reductions/: common.hpp  factories.hpp  ops.hpp
include/AutoDiff/src/Eigen/Reductions/ops/: Mean.hpp  Norm.hpp  SquaredNorm.hpp  Total.hpp
include/AutoDiff/src/internal/: AbstractComputation.hpp  Computation.hpp  Evaluator.hpp  Node.hpp  Path.hpp  Shape.hpp  TopoView.hpp  TypeImpl.hpp  range_algorithm.hpp  traits.hpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt
tests/Basic/: CMakeLists.txt  common.hpp  testArcCos.cpp  testArcCot.cpp  testArcSin.cpp  testArcTan.cpp  testCos.cpp  testCosh.cpp  testCot.cpp  testDifference.cpp  testExp.cpp  testLog.cpp  testMax.cpp  testMin.cpp  testModule.cpp  testNegation.cpp  testPow.cpp  testProduct.cpp  testQuotient.cpp  testSin.cpp  testSinh.cpp  testSqrt.cpp  testSquare.cpp  testSum.cpp  testTan.cpp  testTanh.cpp
tests/Basic/helper/: binary.hpp  table.hpp  unary.hpp
tests/Core/: CMakeLists.txt  testFunction.cpp  testFunctionNoFwd.cpp  testFunctionNoRev.cpp  testVariable.cpp
tests/Core/helper/: Identity.hpp
tests/Eigen/: CMakeLists.txt  testModule.cpp
tests/Eigen/Array/: CMakeLists.txt  common.hpp  testCos.cpp  testDifference.cpp  testExp.cpp  testLog.cpp  testMax.cpp  testMin.cpp  testNegation.cpp  testPow.cpp  testProduct.cpp  testQuotient.cpp  testSin.cpp  testSqrt.cpp  testSquare.cpp  testSum.cpp
tests/Eigen/Array/helper/: binary.hpp  unary.hpp
tests/Eigen/Basic/: CMakeLists.txt  common.hpp  testCos.cpp  testDifference.cpp  testExp.cpp  testLog.cpp  testMax.cpp  testMin.cpp  testNegation.cpp  testPow.cpp  testProduct.cpp  testQuotient.cpp  testSin.cpp  testSqrt.cpp  testSquare.cpp  testSum.cpp
tests/Eigen/Basic/helper/: binary.hpp  table.hpp  unary.hpp
tests/Eigen/CWise/: CMakeLists.txt  common.hpp  testCos.cpp  testDifference.cpp  testExp.cpp  testLog.cpp  testMax.cpp  testMin.cpp  testNegation.cpp  testPow.cpp  testProduct.cpp  testQuotient.cpp  testSin.cpp  testSqrt.cpp  testSquare.cpp  testSum.cpp
tests/Eigen/CWise/helper/: binary.hpp  unary.hpp
tests/Eigen/Products/: CMakeLists.txt  common.hpp  testDotProduct.cpp  testMatrixProduct.cpp  testMatrixVectorProduct.cpp  testTensorProduct.cpp
tests/Eigen/Products/helper/: binary.hpp  unary.hpp
tests/Eigen/Reductions/: CMakeLists.txt  common.hpp  testMean.cpp  testNorm.cpp  testSquaredNorm.cpp  testTotal.cpp
tests/Eigen/Reductions/helper/: unary.hpp
tests/helper/: MockOperation.hpp  int.hpp
tests/internal/: CMakeLists.txt  testComputation.cpp  testEvaluator.cpp  testNode.cpp  testShape.cpp  testTopoView.cpp  testTraits.cpp  testTypeImpl.cpp
tests/internal/helper/: Graph.hpp  MockJacobian.hpp
